feat: /get-progress child endpoint returns lesson completion percentage